@@ -1,3 +1,8 @@
+2007-02-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/tc-mn10300.c (md_convert_frag): Correct fixup size.
+	(md_assemble): Likewise.
+
 2007-02-22  Alan Modra  <amodra@bigpond.net.au>
 
 	* write.c (size_seg): Always clear SEC_RELOC here.
